--- a/assets/sass/partials/base/_menu.scss
+++ b/assets/sass/partials/base/_menu.scss
@@ -63,6 +63,15 @@ body > .nav {
     font-weight: $bold;
     line-height: $fh0 * 1.25;
   }
+  
+  a {
+    transition: text-shadow 50ms;
+
+    &:hover {
+      border: 0;
+      text-shadow: $border * 1.5 $border * 1.5 $primary;
+    }
+  }
 // -----------------------------------------------------------------------------
 }
 // -----------------------------------------------------------------------------
