--- a/assets/sass/partials/base/_thought.scss
+++ b/assets/sass/partials/base/_thought.scss
@@ -30,6 +30,7 @@
 // Date ------------------------------------------------------------------------
   .post-title {
     line-height: $line-height;
+    margin-bottom: $distance / 2;
   }
 // -----------------------------------------------------------------------------
 
