--- a/assets/sass/partials/base/_navigation.scss
+++ b/assets/sass/partials/base/_navigation.scss
@@ -27,6 +27,10 @@
     line-height: $header-height - $distance * 2;
     margin-top: $distance * 2;
     width: auto;
+
+    > a:hover {
+      border: 0;
+    }
   }
 // -----------------------------------------------------------------------------
 }
