--- a/assets/sass/partials/base/_menu-icon.scss
+++ b/assets/sass/partials/base/_menu-icon.scss
@@ -125,7 +125,7 @@
 
 // Prevent hover on mobile -----------------------------------------------------
     @include mq(mobile) {
-      fill: $white!important;
+      fill: $black!important;
 // -----------------------------------------------------------------------------
     }
   }
