--- a/assets/sass/sections/home/_index.scss
+++ b/assets/sass/sections/home/_index.scss
@@ -11,6 +11,10 @@
   position: relative;
   margin-top: calc(#{$fh1 * 3} + #{$distance * 3});
 
+  @include mq(mobile) {
+    margin-top: calc(#{$fh2 * 6} + #{$distance * 3});
+  }
+
   // Dotted background
   &::before {
     background-image: url('../img/dots-texture.png');
@@ -21,6 +25,10 @@
     top: calc((#{$fh1 * 3} + #{$distance * 3}) * -1);
     width: 66.66%;
     z-index: -1;
+
+    @include mq(mobile) {
+      top: calc((#{$fh2 * 6} + #{$distance * 3}) * -1);
+    }
   }
 }
 
@@ -40,6 +48,11 @@
   @include mq(desktop) {
     margin-right: $distance * 1.5;
   }
+
+  @include mq(mobile) {
+    padding: $distance * 1.5;
+    width: 100%;
+  }
 }
 
 
@@ -50,6 +63,11 @@
   right: 0;
   width: 50%;
   z-index: $z-top;
+
+  @include mq(mobile) {
+    padding: 0 $distance * 1.5;
+    width: 66.66%;
+  }
 
   // Menu list
   > .nav > ul {
@@ -65,6 +83,11 @@
       line-height: $line-height;
       text-align: left;
       width: 66.66%;
+
+      @include mq(mobile) {
+        font-size: $fh2;
+        width: 100%;
+      }
     }
 
     a {
