--- a/assets/sass/sections/contact/_index.scss
+++ b/assets/sass/sections/contact/_index.scss
@@ -40,7 +40,7 @@
     width: 100%;
 
     @include mq(mobile) {
-      padding: $distance 0;
+      padding: $distance $distance * 1.5;
     }
 
     .button {
@@ -65,6 +65,7 @@
 // Social Links ----------------------------------------------------------------
   .social-links {
     margin-top: $distance;
+    padding-left: 0;
   }
 // -----------------------------------------------------------------------------
 }
