--- a/assets/sass/sections/post/_index.scss
+++ b/assets/sass/sections/post/_index.scss
@@ -14,6 +14,10 @@
     margin-top: $distance * 3;
     min-height: auto;
     position: relative;
+
+    @include mq(mobile) {
+      margin-top: $distance * 1.5;
+    }
   }
 
   .main-info {
@@ -23,6 +27,15 @@
     min-height: 500px;
     position: relative;
     width: 66.66%;
+
+    @include mq(mobile) {
+      height: auto;
+      max-height: none;
+      min-height: 0;
+      padding: $distance * 1.5;
+      padding-bottom: $distance * 3;
+      width: 100%;
+    }
 
     &::before {
       background-image: url('../img/dots-texture.png');
@@ -50,6 +63,14 @@
     .post-title {
       font-size: $fh0;
       font-weight: $medium;
+      line-height: $line-height;
+      margin-top: $distance * 2;
+
+      @include mq(mobile) {
+        font-size: $fh1;
+        position: relative;
+        z-index: 1;
+      }
     }
 
     .post-excerpt {
@@ -60,6 +81,13 @@
       position: absolute;
       width: 50%;
       z-index: 1;
+
+      @include mq(mobile) {
+        bottom: auto;
+        left: auto;
+        position: relative;
+        width: 100%;
+      }
 
       &::after {
         content: '...';
@@ -95,6 +123,14 @@
     width: 50%;
     z-index: -1;
 
+    @include mq(mobile) {
+      height: 50vh;
+      max-height: 50vh;
+      min-height: 0;
+      position: static;
+      width: calc(100% - #{$distance * 3});
+    }
+
     .post-cover {
       animation: blured-out .999s ease-out forwards; // Blur out animation
       background-position: center;
@@ -104,6 +140,12 @@
       max-height: 824px;
       min-height: 500px;
       width: 100%;
+
+      @include mq(mobile) {
+        height: 100%;
+        max-height: 100%;
+        min-height: 0;
+      }
     }
   }
 // -----------------------------------------------------------------------------
@@ -128,6 +170,10 @@
       right: 0;
       top: $distance * 8;
 
+      @include mq(mobile) {
+        position: static;
+      }
+
       &.fixed {
         position: fixed;
         right: calc(50% - #{$site-box / 2});
@@ -135,6 +181,10 @@
 
         @include mq(desktop) {
           right: 0;
+        }
+
+        @include mq(mobile) {
+          position: static;
         }
       }
     }
@@ -149,6 +199,11 @@
     margin-left: 0;
     text-align: left;
     width: 66.66%;
+
+    @include mq(mobile) {
+      padding: 0 $distance * 1.5;
+      width: 100%;
+    }
 
     .post-header {
       text-align: left;
@@ -177,19 +232,31 @@
 
 // Post Footer
 // -----------------------------------------------------------------------------
-  .post-content + .post-footer {
-    margin-top: $distance * 3;
+  .post-footer {
+    @include mq(mobile) {
+      padding: 0 $distance * 1.5;
+    }
   }
 
   .author,
   .share {
     margin-top: $distance * 3;
     width: 100%;
+
+    @include mq(mobile) {
+      @include inline-block;
+      margin-top: 0;
+      width: 50%;
+    }
   }
 
 // Author ----------------------------------------------------------------------
   .author {
     text-align: right;
+
+    @include mq(mobile) {
+      text-align: left;
+    }
 
     .author-image {
       @extend %auth-image;
